se crea tab1 y se modifica el css

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,38 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<!DOCTYPE html>
+<html lang="es" class="main">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<head>
+  <meta charset="utf-8" />
+  <title>Barkeepers</title>
+  <link rel="stylesheet" href="index.css" />
+  <meta name="color-scheme" content="light dark" />
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="msapplication-tap-highlight" content="no" />
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-</ion-content>
+  <link rel="icon" type="image/png" href="assets/icon/icon.png" />
+
+  <!-- add to homescreen for ios -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+</head>
+
+<body >
+
+  <div class="barraUs">
+    <!--<div class="barraUs " ><a href="./app/tab1/tab1.page.html"><img src="assets/Us.png" alt="user" class="iconUs" id="icon_US"></a></div>-->
+    <!--<div class="barraUs more " ><img src="assets/more.png" alt="more" class=" iconUs" id="more"></div>Es un boton que va a cambiar la imagen de usuario por una que quiera el usario
+    <div class="barraUs logo" ><img src="assets/isotipo.png" alt="Barkeepers" id="logo"></div>-->
+  </div>
+  <div class="barraNav">
+
+  </div>
+  <div class="Bus&Lis">
+
+  </div>
+  <div class="Coctel">
+
+  </div>
+</body>
+
+</html>
