--- a/app/tab1/users.css
+++ b/app/tab1/users.css
@@ -86,12 +86,12 @@ html {
                 0 0 100px #03e9f4;
   }
 
-  .login-box input[type="button"] span {
+  .login-box input[type="button"]{
     position: absolute;
     display: block;
   }
   
-  .login-box input[type="button"] span:nth-child(1) {
+  .login-box input[type="button"]  {
     top: 0;
     left: -100%;
     width: 100%;
@@ -109,7 +109,7 @@ html {
     }
   }
   
-  .login-box input[type="button"] span:nth-child(2) {
+  .login-box input[type="button"]  {
     top: -100%;
     right: 0;
     width: 2px;
@@ -128,7 +128,7 @@ html {
     }
   }
   
-  .login-box input[type="button"] span:nth-child(3) {
+  .login-box input[type="button"] {
     bottom: 0;
     right: -100%;
     width: 100%;
@@ -147,7 +147,7 @@ html {
     }
   }
   
-  .login-box a span:nth-child(4) {
+  .login-box input[type="button"] {
     bottom: -100%;
     left: 0;
     width: 2px;
